# floaty-todo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/skills/: README.md
.claude/skills/todo/: SKILL.md
docs/superpowers/plans/: 2026-05-14-floaty-todo-v0.1.md  2026-05-15-global-hotkey.md  2026-05-15-quadrant-view.md  2026-05-15-toast-notifications.md  2026-05-16-delete-task.md
docs/superpowers/specs/: 2026-05-15-delete-task-design.md  2026-05-15-global-hotkey-design.md  2026-05-15-quadrant-view-design.md  (+2 more)
scripts/: generate-icon.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  history.rs  hotkeys.rs  hub.rs  lib.rs  main.rs  parser.rs  registry.rs  shell.rs  storage.rs  types.rs  watcher.rs
src/components/: ConfirmDialog.vue  EmptyState.vue  FileGroup.vue  QuadrantGroup.vue  QuickAddDialog.vue  SourceGroup.vue  TaskEditorDialog.vue  TaskItem.vue  TaskList.vue  TitleBar.vue  ToastContainer.vue
src/components/icons/: Icon.vue  (+1 more)
src/composables/: useCollapse.ts  useConfirm.ts  useQuickAdd.ts  useSourceDrag.ts  useTaskEditor.ts  useTheme.ts  useToast.ts
src/i18n/: index.ts
src/services/: tauri-api.ts
src/stores/: history.ts  settings.ts  tasks.ts
src/styles/: main.css
src/types/: history.ts  task.ts
src/utils/: colors.ts  errors.ts  hotkey.test.ts  hotkey.ts  inline-md.ts
src/views/: HistoryView.vue  SettingsView.vue
(+2 files in other folders)
