[package]
name = "floaty-todo"
version = "0.1.0"
description = "A floating todo app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "floaty_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
notify = "6.1"
notify-debouncer-full = "0.3"
sha2 = "0.10"
walkdir = "2.5"
once_cell = "1.19"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tauri-plugin-dialog = "2"
hex = "0.4"
tempfile = "3.10"

